projects/skies/services-old/00-keycloack-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth.service
spec:
  tls:
    - hosts:
        - keycloak.127.0.0.1.nip.io
  rules:
    - host: keycloak.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: auth.service
                port:
                  number: 8080
